# clawdhome

./: .gitignore  AGENTS.md  CHANGELOG.en.md  CHANGELOG.zh.md  CLAUDE.md  Makefile  README.md  README.zh.md  project.yml
ClawdHome/: ClawdHome.entitlements  ClawdHomeApp.swift  ContentView.swift  Info.plist  Stable.xcstrings
ClawdHome.xcodeproj/: project.pbxproj
ClawdHomeCLI/: CLIHelperClient.swift  main.swift
ClawdHomeHelper/: GatewayWatchdog.swift  HelperImpl+Agent.swift  HelperImpl+Backup.swift  HelperImpl+BrowserAccount.swift  HelperImpl+Config.swift  HelperImpl+Diagnostics.swift  HelperImpl+Files.swift  HelperImpl+Hermes.swift  HelperImpl+Install.swift  HelperImpl+LlmWiki.swift  HelperImpl+Plugin.swift  HelperImpl+UserGateway.swift  HelperLogging.swift  MaintenanceTerminalSession.swift  main.swift
EmbeddedLLMWiki/runtime/: Cargo.toml  build.rs
EmbeddedLLMWiki/runtime/src/: clip_server.rs  lib.rs  main.rs
EmbeddedLLMWiki/runtime/src/commands/: fs.rs  knowledge_base.rs  mod.rs  project.rs  vectorstore.rs
EmbeddedLLMWiki/runtime/src/types/: wiki.rs
Shared/: BrowserAccountModels.swift  HealthCheck.swift  HelperProtocol.swift  HelperSharedTypes.swift  IMAccountModelsV2.swift  LLMWikiModels.swift  OpenclawConfigSerializerV2.swift  ProcessModels.swift  PromptMemoryModels.swift  UserAdoptionFlow.swift  UserDetailWindowLayout.swift  UserInitPresentationRouting.swift
docs/: browser-account-technical-spec.md  i18n.md  llm-wiki-integration-architecture.md  security-isolation.md  shared-folders.md
release-notes/: v1.10.0.en.md  v1.10.0.zh.md  v1.10.1.en.md  (+7 more)
(+214 files in other folders)
